# lite_vxi

./: Cargo.toml  LICENSE  README.md
src/: config.rs  fs_to_ccxml.rs  lib.rs  logic.rs  main.rs  parser.rs
xml/: fs-ccxml.xml  start.xml  test.xml
